# Recruitment-Radar-v-1

./: .env.example  .gitattributes  .gitignore  README.md  base.py  config.py  conftest.py  justjoin.py  justjoin_sample.json  pyproject.toml  smoke_justjoin.py  test_base.py  test_justjoin.py  test_justjoin_live.py
.github/workflows/: scrape-weekly.yml  tests.yml
.streamlit/: config.toml  secrets.example.toml
config/: scraping_keywords.toml
data/snapshots/2026-05-16/: nofluff.parquet  summary.json
data/snapshots/2026-05-18/: nofluff.parquet  pracuj.parquet  summary.json
data/snapshots/2026-05-19/: nofluff.parquet  pracuj.parquet  summary.json
data/snapshots/2026-05-21/: justjoin.parquet  nofluff.parquet  pracuj.parquet  rocketjobs.parquet  summary.json
data/snapshots/2026-05-22/: justjoin.parquet  nofluff.parquet  pracuj.parquet  rocketjobs.parquet  summary.json
data/snapshots/2026-05-25/: justjoin.parquet  nofluff.parquet  pracuj.parquet  rocketjobs.parquet  summary.json
data/snapshots/2026-05-27/: justjoin.parquet  pracuj.parquet  rocketjobs.parquet  summary.json
data/snapshots/2026-05-29/: justjoin.parquet  pracuj.parquet  rocketjobs.parquet  summary.json
data/snapshots/2026-06-01/: justjoin.parquet  nofluff.parquet  pracuj.parquet  rocketjobs.parquet  summary.json
data/snapshots/2026-06-08/: justjoin.parquet  nofluff.parquet  pracuj.parquet  rocketjobs.parquet  summary.json
data/snapshots/2026-06-13/: justjoin.parquet  pracuj.parquet  rocketjobs.parquet  summary.json
data/snapshots/2026-06-15/: justjoin.parquet  nofluff.parquet  pracuj.parquet  rocketjobs.parquet  summary.json
data/snapshots/2026-06-16/: justjoin.parquet  nofluff.parquet  (+3 more)
docs/: DEPLOYMENT_RESULTS.md  DEPLOYMENT_SMOKE_CHECKLIST.md  RELEASE_CHECKLIST.md  STREAMLIT_CLOUD_DEPLOYMENT.md
prompts/: jd_parser.md
scripts/: run_scraping.py  smoke_end_to_end.py  smoke_justjoin.py  smoke_nofluff.py  smoke_pracuj.py  smoke_rocketjobs.py  smoke_theprotocol.py  verify_deployment_readiness.py
src/: config.py
src/export/: __init__.py  docx_report.py  excel.py
src/matching/: __init__.py  compare.py  dedup.py  pipeline.py
src/parser/: __init__.py  jd_parser.py  models.py
src/scrapers/: __init__.py  base.py  justjoin.py  nofluff.py  pracuj.py  rocketjobs.py  theprotocol.py
src/ui/: app.py  helpers.py
tests/: conftest.py
tests/fixtures/: nofluff_sample.json  pracuj_sample.html  rocketjobs_sample.json  theprotocol_sample.html  theprotocol_sample.json
tests/integration/: test_jd_parser_live.py  test_nofluff_live.py  test_pracuj_live.py  test_rocketjobs_live.py  test_theprotocol_live.py
(+74 files in other folders)
