[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recruitment-radar"
version = "0.1.0"
description = "Pipeline monitorujący publikacje konkurencji na 5 portalach pracy"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Recruitment Radar Team" }]

# Wybory bibliotek udokumentowane w README.md sekcja "Decyzje dotyczące bibliotek".
# Wersje minimalne pinned w requirements.txt dla powtarzalnych buildów.
dependencies = [
    "httpx>=0.27",
    "playwright>=1.45",
    "playwright-stealth>=1.0.6",
    "rapidfuzz>=3.9",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyarrow>=16.0",
    "anthropic>=0.34",
    "streamlit>=1.36",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "python-docx>=1.1",
    "PyGithub>=2.3",
    "tenacity>=8.5",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests>=2.32",
    "types-beautifulsoup4>=4.12",
    "pandas-stubs>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "docker"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "B008",  # function call in default arg — używamy Depends-style w niektórych miejscach
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserty w testach są normalne

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
# Skanujemy tylko src — testy mają luźniejsze reguły i są weryfikowane przez ruff
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: testy uderzające w prawdziwe API (skip domyślnie, włącz przez -m live)",
    "e2e: testy end-to-end z przeglądarką",
]
addopts = [
    "-ra",
    "--strict-markers",
    "-m", "not live and not e2e",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*"]  # UI testowane E2E w Prompcie 12

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
[tool.poetry]
package-mode = false

